# portfolio_risk_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
app/: features.py
scripts/: check_comments.py
training/: evaluate.py  generate_scenarios.py  train.py
