[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "portfolio-risk-service"
version = "0.1.0"
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter + complexity enforcement
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "N",    # pep8 naming conventions
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "SIM",  # flake8-simplify
    "C90",  # McCabe complexity
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10   # hard cap — forces decomposition of complex logic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true   # no silent type: ignore escapes
show_error_codes = true

# ---------------------------------------------------------------------------
# bandit — security static analysis
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["app", "training"]
severity = "medium"          # fail on medium+ (hardcoded secrets, unsafe pickle, SQL injection)
skips = []

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
